fix: color initial equals black on firefox (why?)

--- a/src/pages/Index.css
+++ b/src/pages/Index.css
@@ -56,7 +56,7 @@ p.index-message {
 }
 
 .index-sample a:visited {
-  color: initial;
+  color: white;
 }
 
 .index-sample a:hover {
